# parallel

./: .gitignore  .python-version  README.md  _config.yml  benchmark.py  benchmark_mp.py  dockerfile  hamlet_evolver.py  hamlet_evolver_mp.py  hamlet_quotes.py  hamlet_tldr.txt  hello.py  hello_mp.py  optimize_hyperparameters.py  profile_in_docker.sh
benchmark/: hamlet_1024.txt  hamlet_128.txt  hamlet_131072.txt  hamlet_16.txt  hamlet_16384.txt  hamlet_2048.txt  hamlet_256.txt  hamlet_32.txt  hamlet_32768.txt  hamlet_4096.txt  hamlet_512.txt  hamlet_64.txt  hamlet_65536.txt  hamlet_8192.txt  results_128.json  results_16.json  results_32.json  results_64.json  results_gil.json  results_gil_free.json  results_mp.json  results_sequential_vs_process.json
docs/: index.html  index_old.html  script.js  style.css
flamegraphs/: python_timing.txt
flamegraphs/report/: index.html
flamegraphs/reports/: index.html
flamegraphs/reports/fib 20/: history.html  index.html
flamegraphs/reports/genetic_algorithm/: history.html  index.html
flamegraphs/single_generation/base/: sample.json  (+1 more)
hamlet-py/: hamlet_essential.txt  pyproject.toml
hamlet-py/hamlet_py/: __init__.py  benchmark.py  hamlet_quotes.py
hamlet-rs/: Cargo.toml  hamlet_abridged.txt
hamletpy/: README.md  async_benchmark.py  profile_task.py  pyproject.toml  timeit_benchmark.py
hamletpy/hamletpy/: hamlet_evolver.py  profiler.py
hamletrs/: Cargo.toml
hamletrs/benches/: tokio_benchmark.rs
hamletrs/src/: genetic.rs  lib.rs  main.rs
slides/: README.md  generate_placeholders.py  index.html  script.js  style.css
(+22 files in other folders)
